--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,14 +8,13 @@ on:
 env:
   SSH_USER: root
   SSH_HOST: 213.239.193.208
-  PROJECT_DIR: /var/www/ergodocs
   DOMAIN: docs.ergoplatform.com
-  JUPYTER_PLATFORM_DIRS: "1"
+  PROJECT_DIR: /var/www/ergodocs
+  JUPYTER_PLATFORM_DIRS: 1
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,159 +25,92 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
-      - name: 🚀 Remote build & atomic deploy
-        shell: bash
-        run: |
-          # Pass env into remote, keep heredoc literal for safety
-          ssh "$SSH_USER@$SSH_HOST" \
-            "PROJECT_DIR='${PROJECT_DIR}' DOMAIN='${DOMAIN}' JUPYTER_PLATFORM_DIRS='${JUPYTER_PLATFORM_DIRS}' bash -s" <<'EOF'
-            set -Eeuo pipefail
-
-            echo "📂 cd to project dir"
-            : "${PROJECT_DIR:?PROJECT_DIR is required}"
-            cd "$PROJECT_DIR"
-
-            echo "🔧 Toolchain"
-            command -v mkdocs || true
-            mkdocs --version || true
-
-            echo "🔄 Git pull (stash if needed)"
-            git stash || true
-            git pull --ff-only
-
-            echo "🐍 Choose Python & create venv"
-            PYBIN="$(command -v python3.11 || command -v python3.10 || command -v python3)"
-            echo "Using Python at: $PYBIN"
-            "$PYBIN" -m venv .venv
-            source .venv/bin/activate
-
-            echo "📦 Install deps (no fail on warnings later)"
-            python -m pip install -U pip
-            # If requirements.txt present, use it; otherwise install a safe minimal set
-            if [ -f requirements.txt ]; then
-              python -m pip install -r requirements.txt
-            else
-              python -m pip install mkdocs mkdocs-material
-            fi
-
-            # Silence the Jupyter path deprecation
-            export JUPYTER_PLATFORM_DIRS="${JUPYTER_PLATFORM_DIRS}"
-
-            echo "🧹 Clean old build dir"
-            rm -rf site || true
-
-            echo "🏗 mkdocs build (no strict, so warnings won't fail)"
-            mkdocs build --no-strict
-
-            echo "🔁 Atomic deploy to site_live"
-            # Prepare a new staged dir
-            rm -rf site_new
-            mkdir -p site_new
-            rsync -a --delete site/ site_new/
-
-            # Flip the live directory atomically
-            rm -rf site_live_prev || true
-            if [ -d site_live ]; then
-              mv site_live site_live_prev
-            fi
-            mv site_new site_live
-
-            # Fix ownership for either www-data or caddy, ignore failures
-            chown -R www-data:www-data site_live || true
-            chown -R caddy:caddy site_live || true
-
-            # Keep a simple deploy marker
-            date -u +"%Y-%m-%dT%H:%M:%SZ" > site_live/.deployed-at
-
-            echo "🧪 Nginx config test & reload (if present)"
-            if command -v nginx >/dev/null 2>&1; then
-              nginx -t
-              systemctl reload nginx || systemctl restart nginx || true
-            fi
-
-            echo "🗒 Tail last error/access logs if they exist"
-            if [ -f /var/log/nginx/error.log ]; then
-              echo "--- /var/log/nginx/error.log (tail -n 80) ---"
-              tail -n 80 /var/log/nginx/error.log || true
-            fi
-            if [ -f /var/log/nginx/access.log ]; then
-              echo "--- /var/log/nginx/access.log (tail -n 20) ---"
-              tail -n 20 /var/log/nginx/access.log || true
-            fi
-
-            echo "👀 Sanity list a few live paths"
-            find "$PROJECT_DIR/site_live" -maxdepth 2 -type d | head -n 20 || true
-
-            echo "✅ Remote deploy finished"
-
-
-      - name: 🔍 Recently updated files on server
-        shell: bash
-        run: |
-          ssh "$SSH_USER@$SSH_HOST" "find '$PROJECT_DIR/site_live' -type f -printf '🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n' | sort -r | head -n 12 || true"
-
-      - name: 🌐 Live HTTP smoke tests (no cache)
-        shell: bash
+      - name: Build & Deploy (no sed, no edits)
         run: |
           set -Eeuo pipefail
-          BASE="https://${DOMAIN}"
-
-          echo "🔎 Fetch live homepage HTML"
-          curl -fsS -H 'Cache-Control: no-cache' "$BASE/" > /tmp/home.html || {
-            echo "❌ Failed to fetch home page (origin/Cloudflare issue?)"
-            exit 1
-          }
-
-          # Check HTML closed properly
-          if ! grep -q "</html>" /tmp/home.html; then
-            echo "❌ Live HTML incomplete"
-            echo "---- First 50 lines of homepage ----"
-            head -n 50 /tmp/home.html || true
-            exit 1
-          fi
-
-          echo "🔎 Extract asset URLs from live HTML"
-          LIVE_JS=$(grep -o 'assets/javascripts/[^"]*' /tmp/home.html | sort -u || true)
-          LIVE_CSS=$(grep -o 'assets/stylesheets/[^"]*' /tmp/home.html | sort -u || true)
-
-          echo "✅ Check each asset returns 200"
-          FAIL=0
-          for f in $LIVE_JS $LIVE_CSS; do
-            url="$BASE/$f"
-            code=$(curl -s -o /dev/null -w "%{http_code}" "$url")
-            echo "$code $url"
-            [ "$code" = "200" ] || FAIL=1
-          done
-          if [ "$FAIL" -ne 0 ]; then
-            echo "❌ One or more assets failed (blank page symptom)."
-            echo "Response headers for /:"
-            curl -I "$BASE/" || true
-            exit 1
-          fi
-
-          echo "🧪 Smoke-check a content page"
-          curl -fsS -H 'Cache-Control: no-cache' "$BASE/faq/" | grep -q "</html>" || {
-            echo "❌ FAQ page did not return valid HTML"
-            curl -I "$BASE/faq/" || true
-            exit 1
-          }
-
-      - name: 🧾 Pull last Nginx logs (remote) when HTTP checks fail
-        if: failure()
-        shell: bash
-        run: |
           ssh "$SSH_USER@$SSH_HOST" '
-            echo "--- /var/log/nginx/error.log (tail -n 120) ---"
-            tail -n 120 /var/log/nginx/error.log || true
-            echo "--- /var/log/nginx/access.log (tail -n 40) ---"
-            tail -n 40 /var/log/nginx/access.log || true
+            set -Eeuo pipefail
 
-            echo "🔎 Active server blocks mentioning ${DOMAIN}"
-            if command -v nginx >/dev/null 2>&1; then
-              nginx -T 2>/dev/null | grep -n "${DOMAIN}" -n -C2 || true
+            TS=$(date +%Y%m%d-%H%M%S)
+            PROJ="${PROJECT_DIR:-/var/www/ergodocs}"
+            DOM="${DOMAIN:-docs.ergoplatform.com}"
+
+            echo "📂 cd $PROJ"
+            cd "$PROJ"
+
+            echo "🐍 venv + deps"
+            apt-get update -y
+            apt-get install -y python3-venv python3-pip
+            python3 -m venv .venv
+            . .venv/bin/activate
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+
+            echo "🏗 mkdocs build (non-strict)"
+            rm -rf site
+            mkdocs build
+
+            echo "🔁 atomic swap -> site_live"
+            rm -rf site_next
+            cp -a site site_next
+            mv -T site_next site_live
+            chown -R caddy:caddy site_live || true
+            touch site_live/.deployed-at
+
+            echo "🚦 Nginx: disable conflicting vhosts (no edits, just move symlinks)"
+            mkdir -p /etc/nginx/sites-disabled
+
+            # 1) If the distro "default" site has your domain inside it, move it out
+            if [ -e /etc/nginx/sites-enabled/default ] && \
+               grep -qE "server_name[[:space:]]+${DOM};" /etc/nginx/sites-enabled/default; then
+              mv /etc/nginx/sites-enabled/default "/etc/nginx/sites-disabled/default.${TS}"
+              echo "➡️  moved: default -> sites-disabled/default.${TS}"
             fi
 
-            echo "🔎 Free -m / top summary"
-            free -m || true
-            ps axo stat,ppid,pid,cmd | awk '"'"'$1 ~ /Z/ {print $0}'"'"' | head -n 20 || true
+            # 2) Move ANY other enabled files that declare your domain, except your intended file
+            for f in /etc/nginx/sites-enabled/*; do
+              [ -e "$f" ] || continue
+              base="$(basename "$f")"
+              # keep the canonical one (adjust name here if yours differs)
+              if [ "$base" = "ergo-docs.conf" ]; then
+                continue
+              fi
+              if grep -qE "server_name[[:space:]]+${DOM};" "$f"; then
+                mv "$f" "/etc/nginx/sites-disabled/${base}.${TS}"
+                echo "➡️  moved: $base -> sites-disabled/${base}.${TS}"
+              fi
+            done
+
+            echo "🧪 nginx -t && reload"
+            nginx -t
+            systemctl reload nginx
+
+            echo "🧾 active server blocks for ${DOM}"
+            nginx -T 2>/dev/null | awk "/server_name ${DOM}/,/\}/"
+
+            echo "🧪 origin check via SNI to 127.0.0.1"
+            # Use -k since Cloudflare origin cert isn’t public CA
+            curl -fsS -k --resolve "${DOM}:443:127.0.0.1" "https://${DOM}/" >/tmp/home.html
+            grep -q "</html>" /tmp/home.html || { echo "❌ origin HTML incomplete"; exit 1; }
+
+            echo "✅ origin OK"
+          '
+
+      - name: List latest deployed files
+        run: |
+          ssh "$SSH_USER@$SSH_HOST" "find '$PROJECT_DIR/site_live' -type f -printf '🕒 %TY-%Tm-%Td %TH:%TM:%TS %p\n' | sort -r | head -n 15 || true"
+
+      - name: Light Cloudflare probe (non-fatal)
+        continue-on-error: true
+        run: |
+          curl -fsS -H "Cache-Control: no-cache" "https://${DOMAIN}/" | head -n 1 || true
+
+      - name: Tail Nginx logs (debug aid)
+        if: always()
+        run: |
+          ssh "$SSH_USER@$SSH_HOST" '
+            echo -e "\n--- /var/log/nginx/error.log (tail -n 80) ---"
+            tail -n 80 /var/log/nginx/error.log || true
+            echo -e "\n--- /var/log/nginx/access.log (tail -n 40) ---"
+            tail -n 40 /var/log/nginx/access.log || true
           '
