--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,76 +26,119 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
-      - name: Build & Deploy (no sed, no edits)
+      - name: Build & Deploy (rotate site_live; no sed)
         run: |
           set -Eeuo pipefail
-          ssh "$SSH_USER@$SSH_HOST" '
-            set -Eeuo pipefail
+          ssh "$SSH_USER@$SSH_HOST" bash -s <<EOF
+          set -Eeuo pipefail
 
-            TS=$(date +%Y%m%d-%H%M%S)
-            PROJ="${PROJECT_DIR:-/var/www/ergodocs}"
-            DOM="${DOMAIN:-docs.ergoplatform.com}"
+          TS=\$(date +%Y%m%d-%H%M%S)
+          PROJ="${PROJECT_DIR}"
+          DOM="${DOMAIN}"
 
-            echo "📂 cd $PROJ"
-            cd "$PROJ"
+          echo "📂 cd \$PROJ"
+          cd "\$PROJ"
 
-            echo "🐍 venv + deps"
-            apt-get update -y
-            apt-get install -y python3-venv python3-pip
-            python3 -m venv .venv
-            . .venv/bin/activate
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+          echo "🐍 venv + deps"
+          apt-get update -y
+          apt-get install -y python3-venv python3-pip
+          python3 -m venv .venv
+          . .venv/bin/activate
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-            echo "🏗 mkdocs build (non-strict)"
-            rm -rf site
-            mkdocs build
+          echo "🏗 mkdocs build (non-strict)"
+          rm -rf site
+          mkdocs build
 
-            echo "🔁 atomic swap -> site_live"
-            rm -rf site_next
-            cp -a site site_next
-            mv -T site_next site_live
-            chown -R caddy:caddy site_live || true
-            touch site_live/.deployed-at
+          echo "🔁 prepare site_next"
+          rm -rf site_next
+          cp -a site site_next
 
-            echo "🚦 Nginx: disable conflicting vhosts (no edits, just move symlinks)"
-            mkdir -p /etc/nginx/sites-disabled
+          echo "🔁 rotate existing site_live (if any)"
+          if [ -e site_live ] || [ -L site_live ]; then
+            OLD="site_old_\$TS"
+            mv site_live "\$OLD"
+            echo "↪️  moved prior site to: \$OLD"
+          fi
 
-            # 1) If the distro "default" site has your domain inside it, move it out
-            if [ -e /etc/nginx/sites-enabled/default ] && \
-               grep -qE "server_name[[:space:]]+${DOM};" /etc/nginx/sites-enabled/default; then
-              mv /etc/nginx/sites-enabled/default "/etc/nginx/sites-disabled/default.${TS}"
-              echo "➡️  moved: default -> sites-disabled/default.${TS}"
+          echo "🔁 promote site_next -> site_live"
+          mv site_next site_live
+          # Make sure nginx (www-data) can read
+          if id -u www-data >/dev/null 2>&1; then
+            chown -R www-data:www-data site_live || true
+          fi
+          find site_live -type d -exec chmod 755 {} \; || true
+          find site_live -type f -exec chmod 644 {} \; || true
+          touch site_live/.deployed-at
+
+          echo "🚦 Nginx vhost housekeeping (no edits, just enable/disable files)"
+          mkdir -p /etc/nginx/sites-available /etc/nginx/sites-enabled /etc/nginx/sites-disabled
+
+          # 1) Create a clean STATIC vhost for docs (HTTP->HTTPS + HTTPS root)
+          STATIC_AVAIL="/etc/nginx/sites-available/ergo-docs-static.conf"
+          cat > "\$STATIC_AVAIL" <<'NGINX'
+          server {
+            listen 80;
+            listen [::]:80;
+            server_name docs.ergoplatform.com;
+            return 301 https://$host$request_uri;
+          }
+
+          server {
+            listen 443 ssl;
+            listen [::]:443 ssl;
+            server_name docs.ergoplatform.com;
+
+            ssl_certificate     /etc/ssl/certs/docs.ergoplatform.com.pem;
+            ssl_certificate_key /etc/ssl/private/docs.ergoplatform.com.key;
+
+            root /var/www/ergodocs/site_live;
+            index index.html;
+
+            add_header Strict-Transport-Security "max-age=31536000" always;
+
+            location / {
+              try_files $uri $uri/ =404;
+            }
+
+            # Long cache for assets
+            location ~* \.(css|js|png|jpg|jpeg|gif|svg|woff2?|ttf|eot)$ {
+              expires 30d;
+              access_log off;
+              try_files $uri =404;
+            }
+          }
+          NGINX
+
+          # Symlink it into sites-enabled (idempotent)
+          if [ ! -e /etc/nginx/sites-enabled/ergo-docs-static.conf ]; then
+            ln -s "\$STATIC_AVAIL" /etc/nginx/sites-enabled/ergo-docs-static.conf
+          fi
+
+          # 2) Disable any enabled vhost files that also claim the same server_name (proxy leftovers)
+          for f in /etc/nginx/sites-enabled/*; do
+            [ -e "\$f" ] || continue
+            base=\$(basename "\$f")
+            # Keep the static one we just wrote
+            if [ "\$base" = "ergo-docs-static.conf" ]; then
+              continue
             fi
+            if grep -qE "server_name[[:space:]]+${DOMAIN};" "\$f"; then
+              mv "\$f" "/etc/nginx/sites-disabled/\${base}.\$TS"
+              echo "➡️  disabled conflicting vhost: \${base}"
+            fi
+          done
 
-            # 2) Move ANY other enabled files that declare your domain, except your intended file
-            for f in /etc/nginx/sites-enabled/*; do
-              [ -e "$f" ] || continue
-              base="$(basename "$f")"
-              # keep the canonical one (adjust name here if yours differs)
-              if [ "$base" = "ergo-docs.conf" ]; then
-                continue
-              fi
-              if grep -qE "server_name[[:space:]]+${DOM};" "$f"; then
-                mv "$f" "/etc/nginx/sites-disabled/${base}.${TS}"
-                echo "➡️  moved: $base -> sites-disabled/${base}.${TS}"
-              fi
-            done
+          echo "🧪 nginx -t && reload"
+          nginx -t
+          systemctl reload nginx
 
-            echo "🧪 nginx -t && reload"
-            nginx -t
-            systemctl reload nginx
-
-            echo "🧾 active server blocks for ${DOM}"
-            nginx -T 2>/dev/null | awk "/server_name ${DOM}/,/\}/"
-
-            echo "🧪 origin check via SNI to 127.0.0.1"
-            # Use -k since Cloudflare origin cert isn’t public CA
-            curl -fsS -k --resolve "${DOM}:443:127.0.0.1" "https://${DOM}/" >/tmp/home.html
-            grep -q "</html>" /tmp/home.html || { echo "❌ origin HTML incomplete"; exit 1; }
-
-            echo "✅ origin OK"
-          '
+          echo "🧪 origin check via SNI to 127.0.0.1 (Cloudflare origin cert -> -k)"
+          curl -fsS -k --resolve "\${DOM}:443:127.0.0.1" "https://\${DOM}/" > /tmp/home.html
+          grep -q "</html>" /tmp/home.html || { echo "❌ origin HTML incomplete"; exit 1; }
+          echo "✅ origin OK"
+          EOF
 
       - name: List latest deployed files
         run: |
@@ -109,8 +153,8 @@ jobs:
         if: always()
         run: |
           ssh "$SSH_USER@$SSH_HOST" '
-            echo -e "\n--- /var/log/nginx/error.log (tail -n 80) ---"
-            tail -n 80 /var/log/nginx/error.log || true
-            echo -e "\n--- /var/log/nginx/access.log (tail -n 40) ---"
-            tail -n 40 /var/log/nginx/access.log || true
+            echo -e "\n--- /var/log/nginx/error.log (tail -n 100) ---"
+            tail -n 100 /var/log/nginx/error.log || true
+            echo -e "\n--- /var/log/nginx/access.log (tail -n 60) ---"
+            tail -n 60 /var/log/nginx/access.log || true
           '
